Retravailler la présentation 30 minutes

--- a/Slides_30min.Rmd
+++ b/Slides_30min.Rmd
@@ -127,12 +127,12 @@ Axelle Chauvet et largement diffusée à l’Insee et dans le SSP, n'a pas d'éq
 Le projet `utilitR` a pour objectif de produire une documentation qui réponde à deux questions, dans le contexte des travaux de la statistique publique :
 ]
 
-- Comment (bien) travailler avec `R` et RStudio pour profiter de la richesse de cet écosystème ;
+- Comment (bien) travailler avec `R`, RStudio et les outils associés ;
 - Comment réaliser efficacement des tâches standards avec `R`.
 
 --
 
-.sauterligne2[
+.sauterligne[
 Historique du projet :
 ]
 
@@ -143,21 +143,19 @@ Historique du projet :
 * 8-9 juin 2021 : lancement officiel d'`utilitR` ;
 
 .gray[
-* Septembre 2021 : diffusion éventuelle de la documentation sous forme de brochure imprimée.
+* Septembre 2021 : diffusion de la documentation sous format pdf.
 ]
 
----
-# Introduction
+--
 
-.sauterligne2[
+.sauterligne[
 Plan de la présentation :
 ]
 
 - Spécificités du projet ;
 - Contenu de la documentation ;
 - Modes de diffusion de la documentation ;
-- Fonctionnement du projet ;
-
+- Fonctionnement du projet.
 
 
 ---
@@ -274,7 +272,7 @@ output
 
 La documentation `utilitR` vise à répondre à deux grandes questions :
 
-- Comment (bien) travailler avec `R` pour profiter de la richesse de son écosystème :
+- Comment (bien) travailler avec `R`, RStudio et les outils associés ;
   - Utiliser `R` à l'Insee ;
   - Mener un projet statistique avec `R` ;
 
@@ -292,7 +290,7 @@ La documentation `utilitR` vise à répondre à deux grandes questions :
 La documentation `utilitR` vise à répondre à deux grandes questions :
 
 .red[
-- Comment (bien) travailler avec `R` pour profiter de la richesse de son écosystème :
+- Comment (bien) travailler avec `R`, RStudio et les outils associés ;
   - Utiliser `R` à l'Insee ;
   - Mener un projet statistique avec `R` ;
 ]
@@ -474,7 +472,7 @@ S'ils le souhaitent, les services statistiques ministériels peuvent adapter à 
 
 La documentation `utilitR` vise à répondre à deux grandes questions :
 
-- Comment (bien) travailler avec `R` pour profiter de la richesse de son écosystème :
+- Comment (bien) travailler avec `R`, RStudio et les outils associés ;
   - Utiliser `R` à l'Insee ;
   - Mener un projet statistique avec `R` ;
 
@@ -754,6 +752,126 @@ La documentation est diffusée sous trois formes :
 La première brochure pdf millésimée _devrait_ sortir en septembre 2021. La possibilité d'une diffusion sous forme papier est à l'étude.
 ]
 
+
+---
+# Fonctionnement du projet
+## Organisation du projet
+
+**Le projet `utilitR` est un projet collaboratif, horizontal, _open source_ et ouvert à tous, auquel tous les agents peuvent contribuer.**
+
+--
+* Cinq principes détaillés dans le [manifeste](https://github.com/InseeFrLab/utilitR/blob/master/Manifeste.md) : transparence, ouverture, bienveillance, exigence et reproductibilité.
+
+--
+
+* Organisation sans hiérarchie :
+    * Un _groupe de contributeurs_ `r emo::ji("black_nib")` (environ 25), parmi lesquels deux coordinateurs ;
+    * Un _comité de parrainage_ composé de managers  `r emo::ji("angel")`: Benoît Rouppert, Arnaud Degorre, Patrick Sillard, Sébastien Roux.
+--
+
+* Les travaux sont menés selon les méthodes de développement logiciel (_pull requests_, _issues_) ;
+--
+
+* La marche à suivre pour contribuer est détaillée dans le [guide de contribution](https://github.com/InseeFrLab/utilitR/blob/master/CONTRIBUTING.md).
+
+--
+<br><br>
+**Vous pouvez rejoindre l'équipe de contributeurs à tout moment.**
+
+
+---
+# Fonctionnement du projet
+## Les 5 principes du projet `utilitR`
+
+
+* __Transparence__ : l'ensemble du projet est librement accessible sur le dépôt Github, sous licence libre ;
+* __Ouverture__ : toute personne qui le souhaite peut rejoindre le projet à tout moment. Les modalités de contribution peuvent prendre différentes formes, détaillées dans le guide des contributeurs ;
+* __Bienveillance__ : toutes les idées, initiatives et propositions sont les bienvenues, et les contributeurs veillent à se soutenir les uns les autres ;
+* __Exigence__ : les modifications de la documentation sont systématiquement soumises à une revue par les contributeurs du projet et ne sont acceptées que lorsqu'elles rencontrent une large approbation ;
+* __Reproductibilité__ : les exemples développés dans la documentation doivent être reproductibles.
+
+Ces principes sont exposées dans un
+[Manifeste](https://github.com/InseeFrLab/utilitR/blob/master/Manifeste.md)
+exposant la philosophie du projet.
+
+---
+# Fonctionnement du projet
+## Méthode de travail : une démarche collaborative et _open source_
+
+Le projet `utilitR` est entièrement développé avec des outils collaboratifs :
+
+- Tous les codes du projet sont stockés sur un dépôt Github ([https://github.com/InseeFrLab/utilitR](lien)) et disponibles sous licence libre (Licence Ouverte 2.0) ;
+- Les contributeurs collaborent par l'intermédiaire du dépôt `Github` du projet (www.github.com/inseefrlab/utilitr) ;
+- Les travaux sont menés selon les méthodes de développement logiciel (_pull requests_, _issues_) ;
+- Toutes les contributions sont soumises à une relecture par les pairs et validées collégialement (sur le modèle de Wikipedia).
+
+---
+# Fonctionnement du projet
+## Méthode de travail : structuration du projet
+
+<!-- en un site web ou un PDF cohérent (gestion des numéros de chapitre, des -->
+<!-- liens entre fiches, etc.) -->
+
+<!-- (`.Rmd` ➜ `.md` ➜ `.html`) ; -->
+<!-- (`.md` ➜ `.html` ➜ `.pdf`) ; -->
+
+* Les codes sources de la documentation prennent la forme de fichiers `R Markdown`, qui rassemblent les textes et les exemples de codes ;
+* `R` compile ces codes sources de deux manières :
+    + Production d'un site internet grâce au _package_ `blogdown` ;
+    + Production d'une brochure pdf en format A4 grâce au _package_ `pagedown` ;
+    + De plus, l'utilisation de `paged.js` permet de transformer chaque page du site internet en un chapitre paginé prêt à être imprimé.
+* Les modèles de document reposent sur les technologies Web standards (CSS et Javascript) et sont organisés sous la forme d'un _package_.
+
+--
+
+<br>
+* Avantages :
+    + Le site web et la brochure sont générés à partir des mêmes codes sources ;
+    + L'utilisation des outils technologies Web permet de ne pas utiliser `LaTeX` ;
+    + Le projet `utilitR` a induit des évolutions de l'écosystème `R Markdown` qui bénéficient à de nombreux utilisateurs.
+
+---
+# Fonctionnement du projet
+## Méthode de travail
+
+Le projet `utilitR` utilise des méthodes d'intégration continue et de déploiement continu à l'état de l'art :
+
+```{r, echo = FALSE, out.width="85%", fig.align="center"}
+knitr::include_graphics("./resources/graphCI/githubCI_complete.png")
+```
+
+---
+# Fonctionnement du projet
+## Méthode de travail : reproductibilité et qualité
+
+Le dépôt Github d'`utilitR` propose :
+
+* Un __environnement informatique complet et reproductible__ pour produire la documentation (image `Docker`) ;
+* Des scripts d'**intégration continue** qui vérifient que les contributions ne comportent pas d'erreur de programmation, et que les exemples sont bien reproductibles ;
+* Des scripts de **déploiement continu** qui compilent la documentation et déploient le site internet à chaque modification de la branche `master` ;
+* Un **site de prévisualisation** (via `Netlify`) sur lequel les contributeurs peuvent voir les modifications qu'ils apportent au site, sans que le site public ne soit modifié.
+
+--
+
+L'automatisation de ces processus présente de multiples avantages :
+
++ elle allège le travail des coordinateurs et des contributeurs ;
++ elle assure un environnement plus reproductible et facilite le repérage des erreurs ;
++ elle permet aux contributeurs d'ignorer les détails techniques de la production de la documentation et de se concentrer uniquement sur le fond.
+
+---
+# Où en est le projet aujourd'hui ?
+
+* Un portail d'accès sous forme de site *web* :
+    + La documentation principale est disponible sur [www.book.utilitr.org](www.book.utilitr.org) ;
+    + Guide des bonnes pratiques en `R` disponible sur [www.pratiques.utilitr.org](www.pratiques.utilitr.org).
+
+--
+
+* Prochaines étapes :
+    + Mai 2021 : finalisation des contenus ;
+    + 8 juin 2021 : lancement officiel d'`utilitR` ;
+    + Septembre 2021 : diffusion de la version 1 de la brochure pdf.
 
 
 
