--- a/Slides_30min.Rmd
+++ b/Slides_30min.Rmd
@@ -106,37 +106,27 @@ kbl(description_appariement, align = "cll",
 # Introduction
 
 .sauterligne2[
-Le projet `utilitR` est parti de deux constats : 
-]
-
-1. **La transition des agents vers `R` est freinée par une multiplicité d’obstacles** :
-    + Eclatement de la documentation de l'écosystème `R` ;
-    + Multiplicité de *packages*, de qualité variable et parfois redondants ;
-    + Barrière linguistique : la grande majorité de la documentation est en anglais ;
-    + Diversité des cas d'usage de `R` à l'Insee et dans le service statistique public ;
-    
---
-
-2. **Face à ces difficultés, il n'existe pas de documentation de référence sur l'usage de `R` par les statisticiens** :
-    +  La documentation de référence sur `SAS` en français, rédigée par
-Axelle Chauvet et largement diffusée à l’Insee et dans le SSP, n'a pas d'équivalent en `R` ;
-    + La documentation sur `R` est riche mais propose peu d'exemples sur données réelles, proches des cas d'usage des agents.
-    
----
-# Introduction
-
-.sauterligne2[
 Le projet `utilitR` a pour objectif de produire une documentation qui réponde à deux questions, dans le contexte des travaux de la statistique publique :
 ]
 
 - Comment (bien) travailler avec `R`, RStudio et les outils associés ;
-- Comment réaliser efficacement des tâches standards avec `R`.
+  - Utiliser `R` à l'Insee ;
+  - Mener un projet statistique avec `R` ;
 
 --
 
-.sauterligne[
+- Comment réaliser efficacement des tâches standards avec `R` :
+  - Importer des données avec `R` ;
+  - Manipuler des données avec `R` ;
+  - Produire des sorties avec `R`.
+
+
+--
+
+---
+# Introduction
+
 Historique du projet :
-]
 
 * Fin 2019 : premières évocations d'une documentation sur `R` ;
 * Mars 2020 : lancement du projet ;
@@ -148,16 +138,53 @@ Historique du projet :
 * Septembre 2021 : diffusion de la documentation sous format pdf.
 ]
 
---
-
 .sauterligne[
 Plan de la présentation :
 ]
 
+- `utilitR` depuis un an ;
 - Spécificités du projet ;
-- Contenu de la documentation ;
-- Modes de diffusion de la documentation ;
 - Fonctionnement du projet.
+
+
+---
+# `utilitR` depuis un an
+## Depuis la présentation de l'an dernier
+
+- Beaucoup de contenu supplémentaire ;
+- Des contributeurs issus de plus d'institutions ;
+- Aller plus loin dans le CI/CD ;
+- Contributions bénéficiant à toute la communauté `r fontawesome::fa("fab fa-r-project")` ;
+- Deux matinées `utilitR`:
+    + 350 participants jour 1, 250 lors du jour 2 ;
+    + 6 ateliers virtuels en parallèle sur le contenu de la documentation.
+
+<br>__Merci aux contributeurs et aux parrains d'avoir soutenu la démarche__
+
+---
+# `utilitR` depuis un an
+## Diffusion de la documentation
+
+La documentation est diffusée sous trois formes :
+
+- `r fontawesome::fa("fab fa-firefox")` un site internet ([www.utilitr.org](https://www.utilitr.org)) ;
+    + Documentation principale sur [www.book.utilitr.org](www.book.utilitr.org) ;
+    + Guide des bonnes pratiques en `R` sur [www.pratiques.utilitr.org](www.pratiques.utilitr.org) ;
+- `r fontawesome::fa("fas fa-print")` chaque fiche est disponible en format A4 sur le site internet ;
+- `r fontawesome::fa("fas fa-file-pdf")` l'intégralité de la documentation en format pdf. 
+
+<br> Il est envisagé que le site internet soit actualisé en continu, tandis que la brochure pdf serait publiée de façon ponctuelle et millésimée. 
+
+.sauterligne2[
+La première brochure pdf millésimée _devrait_ sortir en septembre 2021. La possibilité d'une diffusion sous forme papier est à l'étude.
+]
+
+
+--
+
+<br> **Participez à la diffusion en faisant connaître `utilitR` dans vos institutions**
+
+
 
 
 ---
@@ -273,371 +300,7 @@ output
 ]
 
 ---
-# Contenu de la documentation
-## Une documentation en deux grandes parties
-
-La documentation `utilitR` vise à répondre à deux grandes questions :
-
-- Comment (bien) travailler avec `R`, RStudio et les outils associés ;
-  - Utiliser `R` à l'Insee ;
-  - Mener un projet statistique avec `R` ;
-
---
-
-- Comment réaliser efficacement des tâches standards avec `R` :
-  - Importer des données avec `R` ;
-  - Manipuler des données avec `R` ;
-  - Produire des sorties avec `R`.
-
----
-# Contenu de la documentation
-## Une documentation en deux grandes parties
-
-La documentation `utilitR` vise à répondre à deux grandes questions :
-
-.red[
-- Comment (bien) travailler avec `R`, RStudio et les outils associés ;
-  - Utiliser `R` à l'Insee ;
-  - Mener un projet statistique avec `R` ;
-]
-
-- Comment réaliser efficacement des tâches standards avec `R` :
-  - Importer des données avec `R` ;
-  - Manipuler des données avec `R` ;
-  - Produire des sorties avec `R`.
-
-
-
----
-# Comment (bien) travailler avec `R` à l'Insee
-
-.sauterligne3[
-La première partie de la documentation présente non seulement l'usage de `R` et de RStudio, mais également tout l'écosystème informatique autour de l'usage de `R` à l'Insee, afin d'aider les agents à être autonomes.
-]
-
---
-
-.small80[
-<table class="table" style="margin-left: auto; margin-right: auto;">
- <thead>
-  <tr>
-   <th style="text-align:center;text-align: center;"> Partie </th>
-   <th style="text-align:left;text-align: center;"> Fiches </th>
-  </tr>
- </thead>
-<tbody>
-  <tr>
-   <td style="text-align:center;width: 6cm; font-weight: bold;vertical-align: middle !important;" rowspan="5"> Utiliser <code class="remark-inline-code">R</code> à l’Insee </td>
-   <td style="text-align:left;width: 12cm; "> Utiliser <code class="remark-inline-code">R</code> sur les serveurs AUSv3 </td>
-  </tr>
-  <tr>
-   <td style="text-align:left;width: 12cm; "> Utiliser <code class="remark-inline-code">R</code> sur le SSP Cloud </td>
-  </tr>
-  <tr>
-   
-   <td style="text-align:left;width: 12cm; "> Configurer <code class="remark-inline-code">Git</code> et Gitlab </td>
-  </tr>
-  <tr>
-   
-   <td style="text-align:left;width: 12cm; "> Personnaliser la configuration de <code class="remark-inline-code">R</code> </td>
-  </tr>
-  <tr>
-   
-   <td style="text-align:left;width: 12cm; "> Gérer les ressources informatiques avec <code class="remark-inline-code">R</code> </td>
-  </tr>
-  <tr>
-   <td style="text-align:center;width: 6cm; font-weight: bold;vertical-align: middle !important;" rowspan="5"> Mener un projet statistique avec <code class="remark-inline-code">R</code> </td>
-   <td style="text-align:left;width: 12cm; "> Utiliser les projets RStudio </td>
-  </tr>
-  <tr>
-   
-   <td style="text-align:left;width: 12cm; "> Utiliser <code class="remark-inline-code">Git</code> et Gitlab avec RStudio </td>
-  </tr>
-  <tr>
-   
-   <td style="text-align:left;width: 12cm; "> Utiliser des <i>packages</i> et gérer les dépendances </td>
-  </tr>
-  <tr>
-   
-   <td style="text-align:left;width: 12cm; "> Choisir des <i>packages</i> </td>
-  </tr>
-  <tr>
-   
-   <td style="text-align:left;width: 12cm; "> Demander de l'aide et se documenter </td>
-  </tr>
-</tbody>
-</table>
-]
-
-
----
-# Comment (bien) travailler avec `R` à l'Insee
-## Utiliser `R` à l'Insee
-
-La documentation s'ouvre par une présentation de l'environnement informatique de travail :
-
-- Présentation des environnements informatiques de travail à l'Insee (AUSv3 et SSP Cloud) ;
-- Tutoriels détaillés sur la configuration de `R` et la configuration de Git et Gitlab ;
-- Fiche-conseil : comment utiliser `R` sans saturer les serveurs de l'Insee.
-
-.sauterligne2[
-Des captures d'écran guident les agents à toutes les étapes de l'utilisation des serveurs.
-]
-
----
-# Comment (bien) travailler avec `R` à l'Insee
-
-.sauterligne[
-Comment lancer un service RStudio sur le SSP Cloud
-]
-
-```{r, echo = FALSE, out.width= "95%"}
-knitr::include_graphics("./resources/01_catalogue_services.png")
-```
-
----
-# Comment (bien) travailler avec `R` à l'Insee
-
-.sauterligne[
-Comment configurer un service RStudio sur le SSP Cloud
-]
-
-```{r, echo = FALSE, out.width= "95%"}
-knitr::include_graphics("./resources/02b_lancer_rstudio_options.png")
-```
----
-# Comment (bien) travailler avec `R` à l'Insee
-
-.sauterligne[
-Comment configurer un _token_ sur Gitlab
-]
-
-```{r, echo = FALSE, out.width= "78%"}
-knitr::include_graphics("./resources/config_pat_gitlab3.png")
-```
----
-# Comment (bien) travailler avec `R` à l'Insee
-## Mener un projet statistique avec `R`
-
-La documentation décrit les outils et les méthodes permettant de mener efficacement des projets statistiques avec `R` :
-
-- l'usage des projets RStudio ;
-- Tutoriel détaillé sur l'utilisation de `Git` et Gitlab avec RStudio ;
-- Fiches-conseils :
-  - comment choisir un _package_ ;
-  - comment utiliser les _packages_ `R` ;
-  - comment gérer les dépendances des codes ;
-  - comment chercher de l'aide et se documenter sur `R`.
-
----
-# Comment (bien) travailler avec `R` à l'Insee
-
-.sauterligne[
-Des captures d'écran sont là pour guider les agents.
-]
-
-
-```{r, echo = FALSE, out.width= "38%", out.extra= 'style = "position: absolute; left: 0.5cm; top: 3.7cm; padding: 0; border-width: 0 0 0 1px; border-color: black; border-style: solid;"'}
-knitr::include_graphics("./resources/create_project_1.png")
-```
-```{r, echo = FALSE, out.width= "50%", out.extra= 'style = "position: absolute; left: 10.8cm; top: 5.5cm; padding: 0; border-width: 0 1px 1px 1px; border-color: black; border-style: solid;"'}
-knitr::include_graphics("./resources/create_project_0.png")
-```
-```{r, echo = FALSE, out.width= "38%", out.extra= 'style = "position: absolute; top: 11cm; left: 0.5cm; padding: 0;"'}
-knitr::include_graphics("./resources/onglet_git1.png")
-```
-```{r, echo = FALSE, out.width= "50%", out.extra= 'style = "position: absolute; top: 13.5cm; left: 10.8cm; padding: 0;"'}
-knitr::include_graphics("./resources/onglet_git8.png")
-```
-
----
-# Comment (bien) travailler avec `R` à l'Insee
-## Et quand on utilise `R` ailleurs qu'à l'Insee?
-
---
-
-.sauterligne2[
-Les éléments spécifiques à l'Insee sont bien isolés du reste de la documentation, de façon à ce que les autres utilisateurs de `R` puissent se l'approprier aisément.
-]
-
-.sauterligne2[
-.small90[
-.specificite[
-Les spécificités informatique de l'Insee sont signalées dans des boîtes colorées.
-]
-]
-]
-
-.sauterligne[
-S'ils le souhaitent, les services statistiques ministériels peuvent adapter à moindre coût la documentation à leur propre environnement informatique.
-]
-
----
-# Contenu de la documentation
-## Une documentation en deux grandes parties
-
-La documentation `utilitR` vise à répondre à deux grandes questions :
-
-- Comment (bien) travailler avec `R`, RStudio et les outils associés ;
-  - Utiliser `R` à l'Insee ;
-  - Mener un projet statistique avec `R` ;
-
-
-.red[
-- Comment réaliser efficacement des tâches standards avec `R` :
-  - Importer des données avec `R` ;
-  - Manipuler des données avec `R` ;
-  - Produire des sorties avec `R`.
-]
-
-
----
-# Réaliser des tâches standards avec `R`
-
-.sauterligne3[
-La seconde partie de la documentation rassemble un ensemble de fiches thématiques qui expliquent comment réaliser des tâches standards avec `R`.
-]
-
---
-
-.small80[
-<table class="table" style="margin-left: auto; margin-right: auto;">
- <thead>
-  <tr>
-   <th style="text-align:center;text-align: center;"> Partie </th>
-   <th style="text-align:left;text-align: center;"> Fiches </th>
-  </tr>
- </thead>
-<tbody>
-  <tr>
-   <td style="text-align:center;width: 6cm; font-weight: bold;vertical-align: middle !important;" rowspan="3"> Importer des données </td>
-   <td style="text-align:left;width: 12cm; "> Importer des données (SAS, csv, txt, ods, xlsx...) </td>
-  </tr>
-  <tr>
-   
-   <td style="text-align:left;width: 12cm; "> Utiliser une API </td>
-  </tr>
-  <tr>
-   
-   <td style="text-align:left;width: 12cm; "> Utiliser des bases de données </td>
-  </tr>
-  <tr>
-   <td style="text-align:center;width: 6cm; font-weight: bold;vertical-align: middle !important;" rowspan="5"> Manipuler des données </td>
-   <td style="text-align:left;width: 12cm; "> Manipuler des données avec <code class="remark-inline-code">data.table</code> </td>
-  </tr>
-   <tr>
-   <td style="text-align:left;width: 12cm; "> Manipuler des données avec le <code class="remark-inline-code">tidyverse</code> </td>
-   <tr>
-   <td style="text-align:left;width: 12cm; "> Manipuler des données textuelles </td>
-  </tr>
-  <tr>
-   <td style="text-align:left;width: 12cm; "> Manipuler des données spatiales</td>
-   </tr>
-  <tr>
-   <td style="text-align:left;width: 12cm; "> Utiliser des données d'enquête </td>
-  </tr>
-  <tr>
-   <td style="text-align:center;width: 6cm; font-weight: bold;vertical-align: middle !important;" rowspan="3"> Produire des sorties </td>
-   <td style="text-align:left;width: 12cm; "> Réaliser des graphiques </td>
-  </tr>
-  <tr>
-   
-   <td style="text-align:left;width: 12cm; "> Rédiger des documents avec <code class="remark-inline-code">R Markdown</code>  </td>
-  </tr>
-  <tr>
-   
-   <td style="text-align:left;width: 12cm; "> Produire des rapports automatisés </td>
-  </tr>
-</tbody>
-</table>
-]
-
----
-# Réaliser des tâches standards avec `R`
-## Des recommandations précises
-
-Les fiches orientent les agents vers les outils adaptés :
-
-- Chaque fiche commence par des **recommandations** précises sur les outils et les _packages_ à utiliser ou à éviter ;
-- Ces recommandations indiquent dans quelles situations et sous quelles conditions un _package_ doit être utilisé ;
-- Les recommandations reposent sur l'expérience des contributeurs du projet et sont validées après une discussion collégiale.
-
----
-
-# Réaliser des tâches standards avec `R`
-## Des recommandations précises
-
-Voici la recommandation de la fiche _Importer des tables SAS®_ :
-
-.small90[
-.indent[
-.recommandation[
-Deux méthodes sont recommandées pour importer des tables SAS avec `R` :
-
-* méthode en une étape : **utiliser la fonction `read_sas()` du *package* `haven`.**
-* méthode en deux étapes : **Exporter les données SAS en format `csv`, puis les importer en `R`**.
-
-Les particularités du format des tables SAS peuvent être source de difficultés lorsqu'on veut les importer avec `R`. **Il est fortement recommandé de tester la méthode d'importation choisie sur un petit échantillon de données avant d'importer les données**, en particulier lorsque celles-ci sont volumineuses. Il est également recommandé d'essayer l'autre méthode si la première ne fonctionne pas correctement.
-
-En revanche, il est **fortement déconseillé** d'utiliser les *packages*  suivants pour importer des données SAS : `sas7dbat`, `foreign`, `Hmisc`, `SASxport`.
-]
-]
-]
-
----
-# Réaliser des tâches standards avec `R`
-## Des recommandations précises
-
-Les fiches présentent en détail les outils et les _packages_ recommandés :
-
-- avantages et éventuels inconvénients ;
-- utilisation de base et principales options.
-
---
-
-.sauterligne[
-Voici un extrait de la fiche _Importer des fichiers plats_ :
-]
-
-.small80[
-.sauterligne2[
-.extraitdoc[
-Le *package* `data.table` permet d'importer des fichiers plats avec la fonction `fread()`. Cette fonction présente trois avantages :
-
-* Elle est très rapide pour importer de gros volumes de données (et nettement plus rapide que les fonctions du *package* `readr`) ;
-* Elle permet de sélectionner facilement les colonnes qu'on veut importer (option `select`) ;
-* Elle propose un grand nombre d'options, adaptées pour les usages avancés.
-
-]
-]
-]
-
----
-
-# Réaliser des tâches standards avec `R`
-## Des recommandations précises
-
-.extraitdoc[
-.small90[
-Les principales options de `fread()` sont les suivantes :
-]
-.small80[
-| Argument         | Valeur par défaut                           | Fonction                                                              |
-|------------------|---------------------------------------------|-----------------------------------------------------------------------|
-| `file`             | Aucune                                      | Le chemin du fichier à importer                                       |
-| `sep`              | Le caractère le plus fréquent parmi `,\t ;:` | Le délimiteur du fichier                                              |
-| `header`           | `fread()` essaie de deviner                 | La première ligne contient-elle les noms de colonnes?                 |
-| `nrows`            | Pas de limite                                        | Nombre maximum de lignes à importer      |
-| `skip`             | `0`                                           | Sauter les n premières lignes (0 par défaut)                          |
-| `select`           | `NULL`                                        | Sélectionner les colonnes à importer                                  |
-| `colClasses`       | `fread()` essaie de deviner                 | Définir le type des variables                                         |
-| `encoding`         | `"unknown"`                                   | Définir l'encodage du fichier (`"UTF-8"` ou `"Latin-1"`)                  |
-| `dec`              | Le point                                      | Définir le marqueur décimal                                        |
-]
-]
-
----
-# Réaliser des tâches standards avec `R`
+# Spécificités du projet
 ## Des exemples reproductibles et proches des cas d'usage
 
 La documentation comporte de nombreux exemples. Ces exemples ont trois particularités :
@@ -645,118 +308,6 @@ La documentation comporte de nombreux exemples. Ces exemples ont trois particula
 - Les exemples sont **reproductibles** : les agents peuvent reproduire la plupart des exemples de la documentation en en exécutant le code ;
 - Les exemples sont **proches des cas d'usages de `R` dans le SSP** : les jeux de données utilisés dans les exemples sont issus de données disponibles sur [insee.fr](www.insee.fr) (code officiel géographique, base permanente des équipements, répertoire Filosofi) ;
 - Les jeux d'exemple sont **disponibles dans tous les environnements de travail** (SSP Cloud, AUSv3, poste local). Ils sont mis à disposition dans le _package_ `doremifasolData` développé par des contributeurs du projet.
-
----
-# Réaliser des tâches standards avec `R`
-## Des exemples reproductibles et proches des cas d'usage
-
-```{r, echo = FALSE}
-# On augmente le nombre de lignes imprimées pour faire apparaître deux catégories
-options(tibble.print_min = 6)
-options(tibble.print_max = 6)
-options(dplyr.print_min  = 6)
-options(dplyr.print_max  = 6)
-```
-
-.small90[
-```{r, echo = TRUE, warning = FALSE, message = FALSE, eval = FALSE}
-library(doremifasolData)
-library(magrittr)
-library(dplyr)
-
-# Calculer le nombre de stations services par département
-nombre <- doremifasolData::bpe_ens_2018 %>%
-  as_tibble() %>%
-  filter(TYPEQU == "B316") %>% 
-  group_by(DEP) %>% 
-  summarise(nombre_station_serv = sum(NB_EQUIP, na.rm = TRUE)) 
-nombre
-```
-]
-
---
-
-.small90[
-```{r, echo = FALSE, warning = FALSE, message = FALSE, eval = TRUE}
-library(doremifasolData)
-library(magrittr)
-library(dplyr)
-
-nombre <- doremifasolData::bpe_ens_2018 %>%
-  as_tibble() %>%
-  filter(TYPEQU == "B316") %>% 
-  group_by(DEP) %>% 
-  summarise(nombre_station_serv = sum(NB_EQUIP, na.rm = TRUE)) 
-nombre
-```
-]
-
----
-# Réaliser des tâches standards avec `R`
-## Conseils et remarques
-
-Les fiches contiennent des **conseils** et des **remarques** avec trois objectifs :
-- orienter les agents en fonction de leur niveau en `R` ;
-- aider les agents à s'approprier l'environnement `R` ;
-- indiquer les bonnes pratiques à adopter.
-
---
-
-.small80[
-.indent[
-.conseil[
-Si vous êtes complètement débutants en `R`, il est recommandé d'utiliser l'utilitaire d'importation de ` RStudio`. Une fois que les données sont correctement importées, vous pourrez copier-coller le code dans votre script `R` et vous familiariser avec les fonctions du *package* `readr`.
-]
-
-.remarque[
-Il est nettement plus simple de sélectionner des colonnes avec `fread()` qu'avec les fonctions du *package* `readr`. Il est donc recommandé d'utiliser `fread()` lorsque vous souhaitez sélectionner facilement les colonnes à importer.
-]
-]
-]
-
----
-# Réaliser des tâches standards avec `R`
-## Références
-
-La documentation `utilitR` est un point d'entrée non exhaustif dans l'environnement `R`. C'est pourquoi chaque fiche se termine par une liste de références pour aller plus loin. Des références en français sont incluses dans la plupart des cas.
-
-.sauterligne[
-.extraitdoc[
-.small80[
-* sur le *package* `stringr` :
-    - la [documentation](https://www.rdocumentation.org/packages/stringr) du *package* (en anglais) ;
-    - une [vignette](https://cran.r-project.org/web/packages/stringr/vignettes/stringr.html) d'introduction à `stringr` (en anglais) ;
-    - un [aide-mémoire](https://github.com/rstudio/cheatsheets/raw/master/strings.pdf) sur `stringr` et les expressions régulières ;
-* sur les expressions régulières :
-    - [une page en français sur la construction des expressions régulières avec R](https://thinkr.fr/r-les-expressions-regulieres/) ;
-    - un très bon [article de blog](http://perso.ens-lyon.fr/lise.vaudor/strings-et-expressions-regulieres/) en français sur les expressions régulières en `R` ;
-    - une [vignette](https://cran.r-project.org/web/packages/stringr/vignettes/regular-expressions.html) sur les expressions régulières avec `stringr` (en anglais) ;
-    - [un aide-mémoire en anglais sur la construction des expressions régulières avec R](https://github.com/rstudio/cheatsheets/raw/master/strings.pdf) ;
-* sur le *package* `RVerbalExpressions` :
-    - la [documentation](https://cran.r-project.org/web/packages/RVerbalExpressions/RVerbalExpressions.pdf) du *package* (en anglais) ;
-    - une [vignette](https://cran.r-project.org/web/packages/RVerbalExpressions/vignettes/examples.html) d'exemples d'utilisation du *package* (en anglais).
-]
-]
-]
-
----
-# Diffusion de la documentation
-
-La documentation est diffusée sous trois formes :
-
-- `r fontawesome::fa("fab fa-firefox")` un site internet ([www.utilitr.org](https://www.utilitr.org)) ;
-    + Documentation principale sur [www.book.utilitr.org](www.book.utilitr.org) ;
-    + Guide des bonnes pratiques en `R` sur [www.pratiques.utilitr.org](www.pratiques.utilitr.org) ;
-- `r fontawesome::fa("fas fa-print")` chaque fiche est disponible en format A4 sur le site internet ;
-- `r fontawesome::fa("fas fa-file-pdf")` l'intégralité de la documentation en format pdf. 
-
-<br> Il est envisagé que le site internet soit actualisé en continu, tandis que la brochure pdf serait publiée de façon ponctuelle et millésimée. 
-
---
-
-.sauterligne2[
-La première brochure pdf millésimée _devrait_ sortir en septembre 2021. La possibilité d'une diffusion sous forme papier est à l'étude.
-]
 
 
 ---
@@ -775,9 +326,6 @@ La première brochure pdf millésimée _devrait_ sortir en septembre 2021. La po
     * Un _comité de parrainage_ composé de managers  `r emo::ji("angel")`: Benoît Rouppert, Arnaud Degorre, Patrick Sillard, Sébastien Roux.
 --
 
-* Les travaux sont menés selon les méthodes de développement logiciel (_pull requests_, _issues_) ;
---
-
 * La marche à suivre pour contribuer est détaillée dans le [guide de contribution](https://github.com/InseeFrLab/utilitR/blob/master/CONTRIBUTING.md).
 
 --
@@ -787,54 +335,14 @@ La première brochure pdf millésimée _devrait_ sortir en septembre 2021. La po
 
 ---
 # Fonctionnement du projet
-## Les 5 principes du projet `utilitR`
-
-
-* __Transparence__ : l'ensemble du projet est librement accessible sur le dépôt Github, sous licence libre ;
-* __Ouverture__ : toute personne qui le souhaite peut rejoindre le projet à tout moment. Les modalités de contribution peuvent prendre différentes formes, détaillées dans le guide des contributeurs ;
-* __Bienveillance__ : toutes les idées, initiatives et propositions sont les bienvenues, et les contributeurs veillent à se soutenir les uns les autres ;
-* __Exigence__ : les modifications de la documentation sont systématiquement soumises à une revue par les contributeurs du projet et ne sont acceptées que lorsqu'elles rencontrent une large approbation ;
-* __Reproductibilité__ : les exemples développés dans la documentation doivent être reproductibles.
-
-Ces principes sont exposées dans un
-[Manifeste](https://github.com/InseeFrLab/utilitR/blob/master/Manifeste.md)
-exposant la philosophie du projet.
-
----
-# Fonctionnement du projet
 ## Méthode de travail : une démarche collaborative et _open source_
 
 Le projet `utilitR` est entièrement développé avec des outils collaboratifs :
 
-- Tous les codes du projet sont stockés sur un dépôt Github ([https://github.com/InseeFrLab/utilitR](lien)) et disponibles sous licence libre (Licence Ouverte 2.0) ;
 - Les contributeurs collaborent par l'intermédiaire du dépôt `Github` du projet [www.github.com/inseefrlab/utilitr](https://www.github.com/inseefrlab/utilitr) ;
+- Licence libre (Licence Ouverte 2.0) ;
 - Les travaux sont menés selon les méthodes de développement logiciel (_pull requests_, _issues_) ;
 - Toutes les contributions sont soumises à une relecture par les pairs et validées collégialement (sur le modèle de Wikipedia).
-
----
-# Fonctionnement du projet
-## Méthode de travail : structuration du projet
-
-<!-- en un site web ou un PDF cohérent (gestion des numéros de chapitre, des -->
-<!-- liens entre fiches, etc.) -->
-
-<!-- (`.Rmd` ➜ `.md` ➜ `.html`) ; -->
-<!-- (`.md` ➜ `.html` ➜ `.pdf`) ; -->
-
-* Les codes sources de la documentation prennent la forme de fichiers `R Markdown`, qui rassemblent les textes et les exemples de codes ;
-* `R` compile ces codes sources de deux manières :
-    + Production d'un site internet grâce au _package_ `blogdown` ;
-    + Production d'une brochure pdf en format A4 grâce au _package_ `pagedown` ;
-    + De plus, l'utilisation de `paged.js` permet de transformer chaque page du site internet en un chapitre paginé prêt à être imprimé.
-* Les modèles de document reposent sur les technologies Web standards (CSS et Javascript) et sont organisés sous la forme d'un _package_.
-
---
-
-<br>
-* Avantages :
-    + Le site web et la brochure sont générés à partir des mêmes codes sources ;
-    + L'utilisation des outils technologies Web permet de ne pas utiliser `LaTeX` ;
-    + Le projet `utilitR` a induit des évolutions de l'écosystème `R Markdown` qui bénéficient à de nombreux utilisateurs.
 
 ---
 # Fonctionnement du projet
@@ -846,24 +354,55 @@ Le projet `utilitR` utilise des méthodes d'intégration continue et de déploie
 knitr::include_graphics("./resources/graphCI/githubCI_complete.png")
 ```
 
+
 ---
 # Fonctionnement du projet
-## Méthode de travail : reproductibilité et qualité
+## L'intégration continue pour produire plus de contenu
 
-Le dépôt Github d'`utilitR` propose :
+```{r, eval = FALSE, echo = FALSE, out.width="50%", fig.show="hold"}
+knitr::include_graphics("https://crowdspotsimages.s3-us-west-2.amazonaws.com/user-content/LcYPp_4UQjuu44T_RXp8qg.jpeg")
+knitr::include_graphics("https://flexagon.com/wp-content/uploads/2020/04/a-world-without-ci.cd-meme.jpg")
+```
 
-* Un __environnement informatique complet et reproductible__ pour produire la documentation (image `Docker`) ;
-* Des scripts d'**intégration continue** qui vérifient que les contributions ne comportent pas d'erreur de programmation, et que les exemples sont bien reproductibles ;
-* Des scripts de **déploiement continu** qui compilent la documentation et déploient le site internet à chaque modification de la branche `master` ;
-* Un **site de prévisualisation** (via `Netlify`) sur lequel les contributeurs peuvent voir les modifications qu'ils apportent au site, sans que le site public ne soit modifié.
+<!---
+Sources :
+`https://crowdspotsimages.s3-us-west-2.amazonaws.com/user-content/LcYPp_4UQjuu44T_RXp8qg.jpeg`
+`https://flexagon.com/wp-content/uploads/2020/04/a-world-without-ci.cd-meme.jpg`
+
+---->
+
+Chaque action sur `Github` déclenche des scripts pour construire, tester et déployer la mise à jour de la documentation:
+
++ **allège le travail** des coordinateurs et des contributeurs ;
++ assure un **environnement plus reproductible** ;
++ assure la **cohérence entre les différents formats** ;
++ **facilite le repérage des erreurs** ;
++ permet aux contributeurs d'ignorer les détails techniques de la production de la documentation et de **se concentrer uniquement sur le fond**.
+
+```{r, echo = FALSE, out.width="50%", fig.show="hold", fig.align='center'}
+knitr::include_graphics("https://flexagon.com/wp-content/uploads/2020/04/a-world-without-ci.cd-meme.jpg")
+```
+
+---
+# Conclusion : retour d'expérience
+## Avantages
+
+* Traçabilité élevée des modifications ;
+* Simplicité de mise à jour des outputs ;
+* Ouverture des codes ;
+* Collaboration renforcée ;
+* Fiabilité du processus de publication ;
+* Projet plus pérenne.
 
 --
 
-L'automatisation de ces processus présente de multiples avantages :
+## Défis
 
-+ elle allège le travail des coordinateurs et des contributeurs ;
-+ elle assure un environnement plus reproductible et facilite le repérage des erreurs ;
-+ elle permet aux contributeurs d'ignorer les détails techniques de la production de la documentation et de se concentrer uniquement sur le fond.
+* Capacité à se coordonner et à s'écouter ;
+* Nécessité de hiérarchiser les objectifs ;
+* Il faut apprendre à maîtriser les outils ;
+* Il faut trouver du temps pour contribuer ;
+* Importance d'avoir quelques contributeurs expérimentés.
 
 ---
 # Où en est le projet aujourd'hui ?
