--- a/ateliers/index.Rmd
+++ b/ateliers/index.Rmd
@@ -30,6 +30,7 @@ output:
 * [Présentation manipuler des données avec `data.table`](./datatable.html) (script uniquement [ici](./datatable.R))
 * [Présentation réaliser des graphiques avec `ggplot2`](./graphiques.html) (script uniquement [ici](./graphiques.R))
 * [Utiliser des packages, choisir ses packages et gérer ses dépendances](./atelier-dependances.html) (script uniquement [ici](./atelier-dependances.R))
+* [Import de fichiers plats et tableurs](./import-fichiers.html) (script uniquement [ici](./import-fichiers.R))
 
 <!---
 * [Présentation imports de fichiers plats et de tableurs](./import_fichiers.html) (script uniquement [ici](./import_fichiers.R))
